--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -40,18 +40,28 @@
             <% end %>
           </li>
           <li>
-            <%= link_to class: 'nav-link text-dirk' do %>
+            <%= link_to "/customers/sign_up",class: 'nav-link text-dirk' do %>
               <i></i> sign up/
             <% end %>
           </li>
           <li>
-            <%= link_to class: 'nav-link text-dirk' do %>
+            <%= link_to "/customers/sign_in",class: 'nav-link text-dirk' do %>
               <i></i> login/
             <% end %>
           </li>
           <li>
             <%= link_to "/admin/customers", class: 'nav-link text-dirk' do %>
-              <i></i> 会員一覧
+              <i></i> (admin)会員一覧
+            <% end %>
+          </li>
+          <li>
+            <%= link_to "/admin/sign_in", class: 'nav-link text-dirk' do %>
+              <i></i> (admin)Log in
+            <% end %>
+          </li>
+          <li>
+            <%= link_to "/admin/sign_out", class: 'nav-link text-dirk' do %>
+              <i></i> (admin)Log out
             <% end %>
           </li>
         </ul>
