genre[index.new.edit.update]

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -60,6 +60,11 @@
             <% end %>
           </li>
           <li>
+            <%= link_to "/admin/genres", class: 'nav-link text-dirk' do %>
+              <i></i> (admin)ジャンル一覧
+            <% end %>
+          </li>
+          <li>
             <%= link_to "/admin/sign_in", class: 'nav-link text-dirk' do %>
               <i></i> (admin)Log in
             <% end %>
