--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -1,24 +1,32 @@
-<h1>会員一覧</h1>
-<table class="table">
-  <thead>
-    <tr>
-      <th scope="col">会員ID</th>
-      <th scope="col">氏名</th>
-      <th scope="col">メールアドレス</th>
-      <th scope="col">ステータス</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @customers.each do |customer| %>
-      <tr>
-        <th scope="row">1</th>
-        <td><%= link_to "/admin/customers/#{customer.id}" do %>
-        <%= customer.first_name %><%= customer.last_name %>
-        <% end %>
-        </td>
-        <td><%= customer.email %></td>
-        <td><%= customer.is_deleted %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<div class="h3 pb-2 mb-4 text-success border-bottom border-success">
+  会員一覧
+</div>
+<div class='container'>
+  <div class='row g-3'>
+    <div class='col-md-8 offset-md-2'>
+      <table class="table">
+        <thead class="table-success">
+          <tr>
+            <th scope="col">会員ID</th>
+            <th scope="col">氏名</th>
+            <th scope="col">メールアドレス</th>
+            <th scope="col">ステータス</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @customers.each do |customer| %>
+            <tr>
+              <th scope="row">1</th>
+              <td><%= link_to "/admin/customers/#{customer.id}" do %>
+              <%= customer.first_name %><%= customer.last_name %>
+              <% end %>
+              </td>
+              <td><%= customer.email %></td>
+              <td><%= customer.is_deleted %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
