--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,37 +1,7 @@
 <div class="container px-5 px-sm-0">
   <div class="row">
-    <div class="col">
-
-      <h2>注文履歴一覧</h2>
-
-       <table>
-         <thead>
-           <tr>
-             <th>購入日時</th>
-             <th>購入者</th>
-             <th>注文個数</th>
-             <th>注文ステータス</th>
-            </tr>
-          </thead>
-
-          <tbody>
-            <!--#　oderのeach doを使用-->
-            <tr>
-              <tb>
-
-              </tb>
-              <tb>
-
-              </tb>
-              <tb>
-
-              </tb>
-              <tb>
-
-              </tb>
-            </tr>
-          </tbody>
-        </table>
-      </div>
+    <div class ="col-md-8 offset-md-1">
+      <%= render 'admin/orders/index' %>
     </div>
   </div>
+</div>
