add item/new create

--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -15,19 +15,19 @@
       <% @items.each do |item| %>
       <tr>
         <td>
-         <%= @item.id %>
+         <%= item.id %>
         </td>
         <td>
-         <%= @item.name %>
+         <%= item.name %>
         </td>
         <td>
-         <%= @item.introduction %>
+         <%= item.introduction %>
         </td>
         <td>
-         <%= @item.genre %>
+         <%= item.genre %>
         </td>
         <td>
-         <%= @item.status %>
+         <%= item.status %>
         </td>
       </tr>
       <% end %>
