--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class ="col-md-8 offset-md-1">
       <h4>商品新規登録</h4>
-        <%= form_with model: @item, url: new_admin_item_path do |f| %>
+        <%= form_with model: @item, url: admin_items_path, method: :post do |f| %>
 
         <div>
           <%= f.label '商品画像' %>
@@ -17,7 +17,7 @@
           <%= f.text_area :introduction %>
         </div>
         <div>
-          <%= f.label 'ジャンル' %>
+          <!--%= f.label 'ジャンル' %-->
         </div>
         <div>
           <%= f.label '税抜価格' %>
