--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -17,7 +17,8 @@
           <%= f.text_area :introduction %>
         </div>
         <div>
-          <!--%= f.label 'ジャンル' %-->
+          <%= f.label 'ジャンル' %>
+          <%= f.text_field :gunre_id %>
         </div>
         <div>
           <%= f.label '税抜価格' %>
