--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -21,13 +21,13 @@
          <%= item.name %>
         </td>
         <td>
-         <%= item.introduction %>
+         <%= item.price %>
         </td>
         <td>
-         <%= item.genre %>
+         <%= item.genre_id %>
         </td>
         <td>
-         <%= item.status %>
+         <%= item.is_active %>
         </td>
       </tr>
       <% end %>
