--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -18,7 +18,7 @@
         </div>
         <div>
           <%= f.label 'ジャンル' %>
-          <%= f.text_field :gunre_id %>
+          <%= f.text_field :genre_id %>
         </div>
         <div>
           <%= f.label '税抜価格' %>
