--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -25,6 +25,7 @@
      <div class="col-md-12 text-center">
        <!--ここに決まり次第イメージを挿入-->
        イメージ！
+       <%#= image_tag                  %>
      </div>
 
    </div>
