--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -27,7 +27,11 @@
          <%= item.genre_id %>
         </td>
         <td>
-         <%= item.is_active %>
+         <% if item.is_active %>
+          <%=  "販売中" %>
+         <% else %>
+          <%= "販売停止中" %>
+         <% end %>
         </td>
       </tr>
       <% end %>
