--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -18,7 +18,7 @@
         </div>
         <div>
           <%= f.label 'ジャンル' %>
-          <%= f.text_field :genre_id %>
+            <%= f.collection_select :genre_id, Genre.all, :id, :name, {inclide_blank: '選択してください'} %>
         </div>
         <div>
           <%= f.label '税抜価格' %>
@@ -33,7 +33,7 @@
         </div>
 
 
-        <%= f.submit '新規登録', class: 'btn btn-sm btn-success' %>
+        <%= f.submit '変更を保存', class: 'btn btn-sm btn-success' %>
 
       <% end %>
     </div>
