--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -12,7 +12,7 @@
 </div>
 <div>
   <label>ジャンル名</label>
-  <%= @item.gunre_id %>
+
 </div>
 <div>
   <label>税込価格</label>
@@ -20,5 +20,9 @@
 </div>
 <div>
   <label>販売ステータス</label>
-  <%= @item.is_active %>
+  <% if @item.is_active %>
+    <%=  "販売中" %>
+  <% else %>
+    <%= "販売停止中" %>
+  <% end %>
 </div>
