--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -24,7 +24,7 @@
          <%= item.price %>
         </td>
         <td>
-         <%= item.genre_id %>
+         <%= item.genre.name %>
         </td>
         <td>
          <% if item.is_active %>
