--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -33,7 +33,7 @@
         </div>
 
 
-        <%= f.submit '変更を保存', class: 'btn btn-sm btn-success' %>
+        <%= f.submit '新規登録', class: 'btn btn-sm btn-success' %>
 
       <% end %>
     </div>
