--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -18,7 +18,7 @@
         </div>
         <div>
           <%= f.label 'ジャンル' %>
-            <%= f.collection_select :genre_id, Genre.all, :id, :name, {inclide_blank: '選択してください'} %>
+            <%= f.select :genre_id, options_from_collection_for_select(Genre.all, :id, :name), inclide_blank: '選択してください' %>
         </div>
         <div>
           <%= f.label '税抜価格' %>
