--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -2,7 +2,7 @@
 <h3>支払い方法</h3>
   <%= f.radio_button :payment_method, Order.payment_methods.key(0) %>
   <%= f.label :payment_method, Order.payment_methods_i18n[:credit_card] %>
-  
+
   <%= f.radio_button :payment_method, Order.payment_methods.key(1) %>
   <%= f.label :payment_method, Order.payment_methods_i18n[:transfer]%>
 
@@ -13,7 +13,7 @@
 current_customer.address
 <br>
 <!--登録済住所から選択-->
-<%= f.radio_button :ships_id, "curren %>
+<%= f.radio_button :ships_id, "current_customer.ships_id" %>
 <%= f.select :ships_id, options_from_collection_for_select(Ship.all, :id, :address_display) %><br>
 <br>
 <!--新しいお届け先-->
