--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -1,33 +1,40 @@
-<h1>マイページ</h1>
-
-  <table class="table table-bordered">
-    <tbody>
+<div class="h3 pb-2 mb-4 text-success border-bottom border-success">
+    <h1>マイページ</h1>
+</div>
+<div class='container'>
+  <div class='row g-3'>
+    <div class='col-md-8 offset-md-2'>
+   <table class="table table-bordered">
+      <tbody>
         <tr>
-          <td>氏名</td>
+          <td class="table-success border-light">氏名</td>
           <td><%= @customer.first_name %><%= @customer.last_name %></td>
         </tr>
         <tr>
-          <td>フリガナ</td>
+          <td class="table-success border-light">フリガナ</td>
           <td><%= @customer.first_name_kana %><%= @customer.last_name_kana %></td>
         </tr>
         <tr>
-          <td>郵便番号</td>
+          <td class="table-success border-light">郵便番号</td>
           <td><%= @customer.post_code %></td>
         </tr>
         <tr>
-          <td>住所</td>
+          <td class="table-success border-light">住所</td>
           <td><%= @customer.address %></td>
         </tr>
         <tr>
-          <td>電話番号</td>
+          <td class="table-success border-light">電話番号</td>
           <td><%= @customer.telephone_number %></td>
         </tr>
         <tr>
-          <td>メールアドレス</td>
+          <td class="table-success border-light">メールアドレス</td>
           <td><%= @customer.email %></td>
         </tr>
-    </tbody>
+      </tbody>
+       </div>
+      </div>
+    </div>
   </table>
-  <%= link_to "編集","/admin/customers/#{@customer.id}/edit"  %>
+  <%= link_to "編集","/public/customers/#{@customer.id}/edit" , class: "btn btn-sm btn-success" %>
 
 
