--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
 <header>
-  <nav class="navbar navbar-expand-lg navbar-light bg-info">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
       <a class="navbar-brand" href="/"><span>NAGANOCAKE</span></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -9,7 +9,7 @@
         <ul class="navbar-nav ml-auto">
         <% if customer_signed_in? %>
           <li>
-            <!-- %= link_to "マイページ", public_customer_path(current_customer), class: 'nav-link text-dirk' % -->
+            <!-- マイページができたらコメントあうと外す　%= link_to "マイページ", public_customer_path(current_customer), class: 'nav-link text-dirk' % -->
           </li>
           <li>
             <%= link_to '商品一覧', public_items_path, class: 'nav-link text-dirk' %>
