--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,7 +9,7 @@
         <ul class="navbar-nav ml-auto">
         <% if customer_signed_in? %>
           <li>
-            <!-- マイページができたらコメントあうと外す　%= link_to "マイページ", public_customer_path(current_customer), class: 'nav-link text-dirk' % -->
+            <%= link_to "マイページ", public_customer_path(current_customer), class: 'nav-link text-dirk' %>
           </li>
           <li>
             <%= link_to '商品一覧', public_items_path, class: 'nav-link text-dirk' %>
