--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -1,10 +1,52 @@
-<h3>注文情報確認</h3>
-<!--支払い方法・お届け先-->
+<!--<h3>注文情報確認</h3>-->
+<!--<table class="table">-->
+<!--  <thead>-->
+<!--    <tr>-->
+<!--      <th scope="col">商品名</th>-->
+<!--      <th scope="col">単価（税込）</th>-->
+<!--      <th scope="col">数量</th>-->
+<!--      <th scope="col">小計</th>-->
+<!--    </tr>-->
+<!--  </thead>-->
+<!--  <tbody>-->
+<!--    <tr>-->
+<!--      <td><= @cart_items ></td>-->
+<!--      <td><= @cart_items.price ></td>-->
+<!--      <td><= @cart_items.amount ></td>-->
+<!--      <td><= @cart_items.amount+@cart_items.price ></td>-->
+<!--    </tr>-->
+<!--  </tbody>-->
+<!--</table>-->
+
+<!--<table class="table">-->
+<!--  <thead>-->
+<!--    <tr>-->
+<!--      <th scope="col">送料</th>-->
+<!--      <th scope="col">商品合計</th>-->
+<!--      <th scope="col">請求金額</th>-->
+<!--    </tr>-->
+<!--  </thead>-->
+<!--  <tbody>-->
+<!--    <tr>-->
+<!--      <td><= @cart_items.shipping_cost ></td>-->
+<!--      <td><= @cart_items.amount+@cart_items.price ></td>-->
+<!--      <td><= @cart_items.total_payment ></td>-->
+<!--    </tr>-->
+<!--  </tbody>-->
+<!--</table>-->
+
+<h3>支払い方法</h3>
+<%= @order.payment_method%>
+
+<h3>お届け先</h3>
 <%= @order.name %>
 <%= @order.post_code %>
 <%= @order.ship_address %>
 
+
+<!--送信-->
 <%= form_with model: @order, url: '/public/orders', method: :post do |f| %>
+  <%= f.hidden_field :payment_method %>
   <%= f.hidden_field :name %>
   <%= f.hidden_field :post_code %>
   <%= f.hidden_field :ship_address %>
