--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -1,7 +1,9 @@
-<div class="container px-5 px-sm-0">
-  <div class="row">
-    <div class ="col-md-8 offset-md-1">
-      <h4>商品編集</h4>
+<div class="h3 pb-2 mb-4 text-success border-bottom border-success">
+  商品編集
+</div>
+<div class="container">
+  <div class="row g-3">
+    <div class ="col-md-6 offset-md-3">
         <%= form_with model: @item, url: admin_item_path(@item.id), method: :patch do |f| %>
 
         <div>
