--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -1,7 +1,9 @@
-<div class="container px-5 px-sm-0">
-  <div class="row">
-    <div class ="col-md-8 offset-md-1">
-      <h4>商品新規登録</h4>
+<div class="h3 pb-2 mb-4 text-success border-bottom border-success">
+  商品新規登録
+</div>
+<div class="container">
+  <div class="row g-3">
+    <div class ="col-md-6 offset-md-3">
         <%= form_with model: @item, url: admin_items_path, method: :post do |f| %>
 
         <div>
@@ -31,8 +33,6 @@
             <%= f.radio_button :is_active, :false %>
             <%= f.label :is_active, "販売停止中", {value: :false, style: "display: inline-block;"} %>
         </div>
-
-
         <%= f.submit '新規登録', class: 'btn btn-sm btn-success' %>
 
       <% end %>
