--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -1,28 +1,39 @@
-<h4>商品詳細</h4>
-<div>
-  <%= image_tag @item.image, size:'300x300' %>
+<div class="h3 pb-2 mb-4 text-success border-bottom border-success">
+  商品詳細
 </div>
-<div>
-  <label>商品名</label>
-  <%= @item.name %>
-</div>
-<div>
-  <label>商品説明</label>
-  <%= @item.introduction %>
-</div>
-<div>
-  <label>ジャンル名</label>
-  <%= @genre.name %>
-</div>
-<div>
-  <label>税込価格</label>
-  <%= @item.price %>
-</div>
-<div>
-  <label>販売ステータス</label>
-  <% if @item.is_active %>
-    <%=  "販売中" %>
-  <% else %>
-    <%= "販売停止中" %>
-  <% end %>
+<div class="container">
+  <div class="row">
+    <div>
+      <%= image_tag @item.image, size:'300x300' %>
+      </div>
+    <div>
+      <label>商品名</label>
+      <%= @item.name %>
+    </div>
+
+    <div>
+      <label>商品説明</label>
+      <%= @item.introduction %>
+    </div>
+
+    <div>
+      <label>ジャンル名</label>
+      <%= @genre.name %>
+    </div>
+
+    <div>
+      <label>税込価格</label>
+      <%= @item.price %>
+    </div>
+
+    <div>
+      <label>販売ステータス</label>
+      <% if @item.is_active %>
+        <%=  "販売中" %>
+      <% else %>
+        <%= "販売停止中" %>
+      <% end %>
+    </div>
+    </div>
+  </div>
 </div>
