--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -3,8 +3,9 @@
 </div>
 <div class="container">
   <div class="row">
+    <div class = "col">
     <div>
-      <%= image_tag @item.image, size:'300x300' %>
+      <%= image_tag @item.image, size:'400x300' %>
       </div>
     <div>
       <label>商品名</label>
@@ -23,7 +24,7 @@
 
     <div>
       <label>税込価格</label>
-      <%= @item.price %>
+      ¥<%= @item.price %>
     </div>
 
     <div>
@@ -34,6 +35,7 @@
         <%= "販売停止中" %>
       <% end %>
     </div>
+
     </div>
   </div>
 </div>
