--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -33,7 +33,7 @@
             <%= link_to "注文履歴一覧", admin_items_path, class: 'nav-link text-dirk'%>
           </li>
           <li>
-            <%= link_to "ジャンル一覧", admin_jenres_path, class: 'nav-link text-dirk'%>
+            <%= link_to "ジャンル一覧", admin_genres_path, class: 'nav-link text-dirk'%>
           </li>
           <li>
             <%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class: 'nav-link text-dirk' %>
