--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,66 +1,70 @@
-<h2>Sign up</h2>
+<div class="h3 pb-2 mb-4 text-success border-bottom border-success">
+  新規会員登録
+</div>
+<div class='container'>
+  <div class='row g-3'>
+    <div class='col-md-6 offset-md-3'>
+　　　<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+  　　　　<%= render "public/shared/error_messages", resource: resource %>
 
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "public/shared/error_messages", resource: resource %>
-
-      <div class="field">
-        (姓) <br>
-        <%= f.text_field :first_name %>
+      <div class="col-md-6">
+        名前
+        (姓)
+        <%= f.text_field :first_name, autocomplete: "first_name" ,class: 'form-control border-success' %>
       </div>
 
-      <div class="field">
-        (名)<br>
-        <%= f.text_field :last_name %>
+      <div class="col-md-6">
+        (名)
+        <%= f.text_field :last_name, autocomplete: "last_name" ,class: 'form-control border-success' %>
       </div>
 
-      <div class="field">
-        （セイ）<br>
-        <%= f.text_field :first_name_kana %>
+      <div class="col-md-6">
+      （セイ）
+        <%= f.text_field :first_name_kana, autocomplete: "first_name_kana" ,class: 'form-control border-success' %>
       </div>
 
-      <div class="field">
-        （メイ）<br>
-        <%= f.text_field :last_name_kana %>
+      <div class="col-md-6">
+      （メイ）
+        <%= f.text_field :last_name_kana, autocomplete: "last_name_kana" ,class: 'form-control border-success' %>
       </div>
 
-      <div class="field">
-        メールアドレス<br />
-        <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+      <div class="col-md-12">
+        メールアドレス
+        <%= f.email_field :email, autofocus: true, autocomplete: "email" ,class: 'form-control border-success' %>
       </div>
 
-      <div class="field">
-        郵便番号（ハイフンなし）<br>
-        <%= f.text_field :post_code %>
+      <div class="col-md-12">
+        郵便番号（ハイフンなし）
+        <%= f.text_field :post_code, autocomplete: "post_code" ,class: 'form-control border-success' %>
       </div>
 
-      <div class="field">
+      <div class="col-md-12">
         住所<br>
-        <%= f.text_field :address %>
+        <%= f.text_field :address, autocomplete: "address" ,class: 'form-control border-success' %>
       </div>
 
-      <div class="field">
+      <div class="col-md-6">
         電話番号<br>
-        <%= f.text_field :telephone_number %>
+        <%= f.text_field :telephone_number, autocomplete: "telephone_number" ,class: 'form-control border-success' %>
       </div>
 
-      <div class="field">
-        <%= f.label :password %>
+      <div class="col-md-6">
+        パスワード
         <% if @minimum_password_length %>
-        <em>(<%= @minimum_password_length %> characters minimum)</em>
+        <em>(<%= @minimum_password_length %> 文字以上)</em>
         <% end %><br />
-        <%= f.password_field :password, autocomplete: "new-password" %>
+        <%= f.password_field :password, autocomplete: "new-password" ,class: 'form-control border-success' %>
       </div>
 
-      <div class="field">
-        <%= f.label :password_confirmation %><br />
-        <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+      <div class="col-md-6">
+        パスワード確認
+        <%= f.password_field :password_confirmation, autocomplete: "new-password" ,class: 'form-control border-success' %>
       </div>
 
       <div class="actions">
-        <%= f.submit "Sign up" %>
+        <%= f.submit "登録" ,class: "btn btn-success" %>
       </div>
     <% end %>
     </div>
+　<%= render "public/shared/links" %>
 
-<%= render "public/shared/links" %>
