--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -1,23 +1,24 @@
-<div class="container">
+<div class="container text-center">
   <div class="row">
     
 
     <div class="col-md-3">
       <!--ジャンル検索-->
+    <%= render 'public/homes/genres', genres: @genres %>
     </div>
-
-    <div classo="col-md-8 offset-md-1">
-      <h1>
-        商品一覧(全<%= Item.count %>)
-      </h1>
+    <div class="col-md-8 offset-md-1">
+      <h1>商品一覧(全<%= Item.count %>)</h1>
       <table class="table d-flex flex-wrap">
         <% @items.each do |item| %>
-        <tbody>
-          <tr><td><%= image_tag item.image, size: "250x150" %> </td></tr>
-          <tr><td><%= item.name %> </td></tr>
-          <tr><td>&yen;<%= item.price %> </td></tr>
-        </tbody>
+          <%= link_to "/public/items/#{item.id}" do %>
+           <div class="card" style="width: 18rem;">
+           <%= image_tag item.image, size: "250x150" ,class:"card-img-top"%>
+           <div class="card-body">
+            <p class="card-text"><%= item.name %>&yen;<%= item.price %></p>
+          </div>
+          <% end %>
         <% end %>
+          </div>
       </table>
     </div>
 
