--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -3,28 +3,29 @@
 
     <div class="col-md-3">
       <!--ジャンル検索-->
+    <%= render 'public/homes/genres', genres: @genres %>
     </div>
 
 
-    <div classo="col-md-8 offset-md-1">
+    <div class="col-md-8 offset-md-1">
 
       <div class="row">
-        <div classo="col-md-4">
+        <div class="col-md-4">
           <%= image_tag @item.image, size: "200x200" %>
         </div>
 
-        <div classo="col-md-6 offset-md-2">
+        <div class="col-md-6 offset-md-2">
           <h1><%= @item.name %></h1>
           <h2><%= @item.introduction %></h2>
-          &yen;<%= @item.price %>
+          &yen;<%= @item.price %><small class="text-muted">(税込)</small>
         </div>
       </div>
 
 
-      <div class="row">
+      <div class="text-right">
         <%= form_with model: @cart_item, url: '/public/cart_items', method: :post do |f| %>
           <%= f.hidden_field :item_id, :value => @item.id %>
-          <div classo="col-md-3 offset-md-6">
+          <div class="col-md-3 offset-md-6">
             <%= f.select :amount, *[1..10] %>
           </div>
           <div classo="col-md-2 offset-md-1">
