--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,6 +1,8 @@
-<h4>商品一覧</h4>
- <table>
+<div class="h3 pb-2 mb-4 text-success border-bottom border-success">
+商品一覧
+</div>
 
+ <table>
    <thead>
      <tr>
        <th>商品ID</th>
@@ -39,3 +41,7 @@
       <% end %>
     </tbody>
   </table>
+
+  <div>
+  <%= link_to "新規登録", new_admin_item_path, class: 'btn btn-success' %>
+  </div>
