--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -2,40 +2,33 @@
   商品詳細
 </div>
 <div class="container">
-  <div class="row">
-    <div class = "col">
-    <div>
+  <div class="row g-0">
+    <div class= "col-md-7">
       <%= image_tag @item.image, size:'400x300' %>
+    </div>
+
+    <div class="col-md-3">
+      <div class= "card-body ">
+        <p class="card-text">商品名</p>
+
+        <p class="card-text">商品説明
+        <%= @item.introduction %></p>
+
+        <p class="card-text">ジャンル名
+        <%= @genre.name %></p>
+
+        <p class="card-text" >税込価格
+        ¥<%= @item.price %></p>
+
+        <p class="card-text">販売ステータス
+        <% if @item.is_active %>
+          <%=  "販売中" %>
+        <% else %>
+          <%= "販売停止中" %>
+        <% end %>
+        </p>
+        <%= link_to"編集する", edit_admin_item_path(@item.id), class: 'btn btn-sm btn-success' %>
       </div>
-    <div>
-      <label>商品名</label>
-      <%= @item.name %>
-    </div>
-
-    <div>
-      <label>商品説明</label>
-      <%= @item.introduction %>
-    </div>
-
-    <div>
-      <label>ジャンル名</label>
-      <%= @genre.name %>
-    </div>
-
-    <div>
-      <label>税込価格</label>
-      ¥<%= @item.price %>
-    </div>
-
-    <div>
-      <label>販売ステータス</label>
-      <% if @item.is_active %>
-        <%=  "販売中" %>
-      <% else %>
-        <%= "販売停止中" %>
-      <% end %>
-    </div>
-
     </div>
   </div>
 </div>
