--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -30,7 +30,7 @@
             <%= link_to "会員一覧", admin_customers_path, class: 'nav-link text-dirk' %>
           </li>
           <li>
-            <%= link_to "注文履歴一覧", admin_items_path, class: 'nav-link text-dirk'%>
+            <%= link_to "注文履歴一覧", admin_orders_path, class: 'nav-link text-dirk'%>
           </li>
           <li>
             <%= link_to "ジャンル一覧", admin_genres_path, class: 'nav-link text-dirk'%>
