--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -15,7 +15,7 @@
       <td><%= image_tag cart_item.item.image, size: "50x50" %><%= cart_item.item.name %></td>
       <td>&yen;<%= cart_item.item.with_tax_price %></td>
       <td><%= cart_item.amount %></td>
-      <td><%= cart_item.amount+cart_item.price %></td>
+      <td><%= cart_item.amount+cart_item.item.with_tax_price %></td>
     </tr>
     
   </tbody>
@@ -31,9 +31,9 @@
   </thead>
   <tbody>
     <tr>
-      <td><= @cart_items.shipping_cost ></td>
-      <td><= @cart_items.amount+@cart_items.price ></td>
-      <td><= @cart_items.total_payment ></td>
+      <td><%= @order.shipping_cost %></td>
+      <td><%= cart_item.amount+cart_item.item.with_tax_price %></td>
+      <td><%= @order.total_payment %></td>
     </tr>
     <% end %>
   </tbody>
@@ -54,5 +54,8 @@
   <%= f.hidden_field :name %>
   <%= f.hidden_field :post_code %>
   <%= f.hidden_field :ship_address %>
+  <%= f.hidden_field :shipping_cost %>
+  <%= f.hidden_field :status %>
+  
 <%= f.submit "注文を確定する" %>
 <% end %>
