--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -1,58 +1,76 @@
 <h3>注文情報確認</h3>
+<div class="container">
+ <div class="row">
 
-<table class="table">
-  <thead>
-    <tr>
-      <th scope="col">商品名</th>
-      <th scope="col">単価（税込）</th>
-      <th scope="col">数量</th>
-      <th scope="col">小計</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <% @cart_items.each do |cart_item| %>
-      <td><%= image_tag cart_item.item.image, size: "50x50" %><%= cart_item.item.name %></td>
-      <td>&yen;<%= cart_item.item.with_tax_price %></td>
-      <td><%= cart_item.amount %></td>
-      <td><%= cart_item.amount+cart_item.price %></td>
-    </tr>
-    
-  </tbody>
-</table>
+    <div class="col-md-8">
+      <table class="table table-bordered">
+        <thead>
+          <tr>
+            <th scope="col">商品名</th>
+            <th scope="col">単価（税込）</th>
+            <th scope="col">数量</th>
+            <th scope="col">小計</th>
+          </tr>
+        </thead>
+        <% @cart_items.each do |cart_item| %>
+        <tbody>
+          <tr>
+            <td><%= image_tag cart_item.item.image, size: "50x50" %><%= cart_item.item.name %></td>
+            <td>&yen;<%= cart_item.item.with_tax_price %></td>
+            <td><%= cart_item.amount %></td>
+            <td><%= cart_item.subtotal %></td>
+          </tr>
+        </tbody>
+        <% end %>
+      </table>
+    </div>
 
-<table class="table">
-  <thead>
-    <tr>
-      <th scope="col">送料</th>
-      <th scope="col">商品合計</th>
-      <th scope="col">請求金額</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td><= @cart_items.shipping_cost ></td>
-      <td><= @cart_items.amount+@cart_items.price ></td>
-      <td><= @cart_items.total_payment ></td>
-    </tr>
+    <div class="col-md-3 offset-me-1">
+      <table class="table table-bordered">
+        <thead>
+          <tr class="py-5">
+            <th scope="col">送料</th>
+            <th scope="col">商品合計</th>
+            <th scope="col">請求金額</th>
+          </tr>
+        </thead>
+        <% @cart_items.each do |cart_item| %>
+        <tbody>
+          <tr>
+            <td><%= @shipping_cost %></td>
+            <% @total += cart_item.subtotal %>
+            <td><%= @total %></td>
+            <% @total_payment = @total + @shipping_cost %>
+            <td><%= @total_payment %></td>
+          </tr>
+        </tbody>
+        <% end %>
+      </table>
+    </div>
+  </div>
+
+  <div class="row">
+    <h3>支払い方法</h3>
+    <%= @order.payment_method%>
+  </div>
+
+  <div class="row">
+    <h3>お届け先</h3>
+    <%= @order.name %>
+    <%= @order.post_code %>
+    <%= @order.ship_address %>
+  </div>
+
+  <div class="row">
+    <!--送信-->
+    <%= form_with model: @order, url: '/public/orders', method: :post do |f| %>
+      <%= f.hidden_field :payment_method %>
+      <%= f.hidden_field :name %>
+      <%= f.hidden_field :post_code %>
+      <%= f.hidden_field :ship_address %>
+    <%= f.submit "注文を確定する" %>
     <% end %>
-  </tbody>
-</table>
-
-<h3>支払い方法</h3>
-<%= @order.payment_method%>
-
-<h3>お届け先</h3>
-<%= @order.name %>
-<%= @order.post_code %>
-<%= @order.ship_address %>
+  </div>
 
 
-<!--送信-->
-<%= form_with model: @order, url: '/public/orders', method: :post do |f| %>
-  <%= f.hidden_field :payment_method %>
-  <%= f.hidden_field :name %>
-  <%= f.hidden_field :post_code %>
-  <%= f.hidden_field :ship_address %>
-<%= f.submit "注文を確定する" %>
-<% end %>
+</div>
