--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -42,9 +42,12 @@
             <td><%= @total %></td>
             <% @total_payment = @total + @shipping_cost %>
             <td><%= @total_payment %></td>
+
           </tr>
         </tbody>
         <% end %>
+
+        <%= @total %>
       </table>
     </div>
   </div>
