--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,7 +1,7 @@
 <div class="container px-5 px-sm-0">
   <div class="row">
     <div class ="col-md-8 offset-md-1">
-      <h3>TOP 後から注文一覧追加します</h3>
+      <%= render 'admin/orders/index' %>
     </div>
   </div>
 </div>
