--- a/app/views/admin/orders/_index.html.erb
+++ b/app/views/admin/orders/_index.html.erb
@@ -21,7 +21,7 @@
                 <%= order.cunstomer.name %>
               </td>
               <td>
-                <%= order.order_detail.amount %>
+                <% order.amount %>
               </td>
               <td>
                 <%= order.status %>
