--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -1,21 +1,35 @@
-<h1>注文履歴一覧</h1>
-
-
-<% @orders.each do |order| %>
-  <p>注文日</p>
-  <span><%= order.created_at %></span>
-  <p>配送先</p>
-  <span>
-    <%= order.post_code %><br>
-    <%= order.ship_address %><br>
-    <%= order.name %>
-  </span>
-  <p>注文商品</p>
-  <span><%= order.item_id.name %></span>
-  <p>支払金額</p>
-  <span><%= order.total_payment %></span>
-  <p>ステータス</p>
-  <span><%= order.status %></span>
-  <p>注文詳細</p>
-  <%#= link_to "表示する", "/public/orders/#{@order_detail.id}" %>
-<% end %>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <table class="table">
+        <thead>
+          <tr>
+            <th>注文日</th>
+            <th>配送先</th>
+            <th>注文商品</th>
+            <th>支払い金額</th>
+            <th>ステータス</th>
+            <th>注文詳細</th>
+          </tr>
+        </thead>
+        <% @orders.each do |order| %>
+        <tbody>
+          <tr>
+            <td class="align-middle"><%= order.created_at %></td>
+            <td>
+              〒<%= order.post_code %></br>
+              <%= order.ship_address %></br>
+              <%= order.name %>
+            </td>
+            <!--商品名がまだ入ってません -->
+            <td>～商品名を入れる～</td>
+            <td class="align-middle"><%= order.total_payment %></td>
+            <td class="align-middle"><%= order.status %></td>
+            <%#= link_to "表示する", "/public/orders/#{@order_detail.id}" %>
+          </tr>
+          </tbody>
+        <% end %>
+      </table>
+    </div>
+  </div>
+</div>
