--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -90,6 +90,15 @@
       <%= link_to new_public_order_path do %>
         <p>情報入力に進む</p>
       <% end %>
+
+      <!--試し実験 -->
+        <% @cart_items.each do |cart_item| %>
+          <%= cart_item.item_id %> <p>id</p>
+          <%= cart_item.amount %> <p>amount</p>
+          <%= cart_item.item.price %> <p>price</p>
+        <% end %>
+      <!-- 済んだら消す-->
+
     </div>
   </div>
 
