--- a/app/views/public/customers/unsubscribe.html.erb
+++ b/app/views/public/customers/unsubscribe.html.erb
@@ -5,4 +5,4 @@
 
 
   <%=  link_to "退会する", public_withdraw_path, method: :patch , class: "btn btn-danger" %>
-   <%= link_to "退会しない", root_path , class: "btn btn-info" %>
+   <%= link_to "退会しない", root_path , class: "btn btn-primary" %>
