--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -30,8 +30,10 @@
         <%= f.text_field :email, class: "form-control" %>
       </div>
       <div class="text-right">
-        <button type="submit" class="btn btn-success">変更</button>
-        <%= link_to "退会", "/public/customers/unsubscribe", class: "btn btn-danger"  %>
+        <button type="submit" class="btn btn-success">編集内容を保存</button>
+      </div>
+      <div>
+      <%= link_to "退会する", "/public/customers/unsubscribe", class: "btn btn-danger"  %>
       </div>
       <% end %>
     </div>
