--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -5,6 +5,10 @@
   <div class='row g-3'>
     <div class='col-md-8 offset-md-2'>
    <table class="table table-bordered">
+     <div class="form-inline">
+     <h5><strong>会員情報</strong></h5>
+     <%= link_to "編集する","/public/customers/#{@customer.id}/edit" , class: "btn btn-sm btn-success" %>
+     </div>
       <tbody>
         <tr>
           <td class="table-success border-light">氏名</td>
@@ -31,10 +35,19 @@
           <td><%= @customer.email %></td>
         </tr>
       </tbody>
+      </table>
+         <div class="form-inline">
+        <h5><strong>配送先</strong></h5>
+        <%= link_to "一覧を見る", public_ships_path, class: "btn btn-sm btn-primary" %>
+      </div>
+      <div class="form-inline">
+        <h5><strong>購入履歴</strong></h5>
+         <%= link_to "一覧を見る", public_orders_path, class: "btn btn-sm  btn-primary" %>
+      </div>
        </div>
       </div>
     </div>
-  </table>
-  <%= link_to "編集","/public/customers/#{@customer.id}/edit" , class: "btn btn-sm btn-success" %>
+
+
 
 
