--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -34,8 +34,11 @@
         <%= f.text_field :email, class: "form-control" %>
       </div>
       <div class="form-group ">
-        <%= f.label :is_deleted,"会員ステータス",class: "text-success" %>
-        <%= f.text_field :is_deleted, class: "form-control" %>
+        <%= f.radio_button :is_deleted, "false" %>
+        <%= f.label :is_deleted, "有効" %>
+        
+        <%= f.radio_button :is_deleted, "true" %>
+        <%= f.label :is_deleted, "退会" %>
       </div>
       <div class="text-right">
         <button type="submit" class="btn btn-success rounded-pill">変更を保存</button>
