--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-4">
       <!--ジャンル一覧-->
-    <%= render 'public/homes/genres', genres: @genres %>
+    <%= render 'public/items/genres', genres: @genres %>
     </div>
     <div class="col-8"> 中心ようこそ長野Cakeへ </div>
   </div>
