--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -4,7 +4,7 @@
 
     <div class="col-md-3">
       <!--ジャンル検索-->
-    <%= render 'public/homes/genres', genres: @genres %>
+    <%= render 'public/items/genres', genres: @genres %>
     </div>
 
 
