--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -3,7 +3,7 @@
 
     <div class="col-md-3">
       <!--ジャンル検索-->
-    <%= render 'public/homes/genres', genres: @genres %>
+    <%= render 'public/items/genres', genres: @genres %>
     </div>
 
 
