--- a/app/views/admin/order_details/_show.html.erb
+++ b/app/views/admin/order_details/_show.html.erb
@@ -10,16 +10,20 @@
   </thead>
 
   <tbody>
+    <% @order_details.each do |order_detail| %>
     <tr>
-      <td><%= @item.name %></td>
-      <td><%= @item.price %></td>
-      <td><%= @order_detail.amount %></td>
-      <td><%= @order_detail.price %></td>
-      <td><%= @order_detail.making_status %></td>
+      <td><%= order_detail.item.name %></td>
+      <td><%= order_detail.item.price %>円</td>
+      <td><%= order_detail.amount %></td>
+      <td><%= order_detail.subtotal %>円</td>
+      <td>
+        <%= form_with model: order_detail, url: admin_order_detail_path(order_detail), method: :patch, local: true do |f|%>
+          <%= f.select :making_status, OrderDetail.making_statuses.keys.to_a %>
+          <%= f.submit '更新' %>
+        <% end %>
+      </td>
     </tr>
+    <% end %>
   </tbody>
 </table>
-
-
-
 
