--- a/app/views/admin/orders/_index.html.erb
+++ b/app/views/admin/orders/_index.html.erb
@@ -23,7 +23,7 @@
                 <%= order.customer.first_name + order.customer.last_name %>
               </td>
               <td>
-                <= amount %>
+                <%= order.order_details.sum(:amount) %>
               </td>
               <td>
                 <%= order.status %>
