--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -1,7 +1,12 @@
 <div class="container">
+    <div class="row">
+      <div class="col-md-10 offset-md-2">
+        <h3>注文履歴一覧</h3>
+      </div>
+    </div>
   <div class="row">
     <div class="col-md-12">
-      <table class="table table-sm">
+      <table class="table table-sm table-bordered">
         <thead>
           <tr>
             <th>注文日</th>
