--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -7,7 +7,8 @@
 
     <!--注文情報-->
     <div class="col-md-6">
-      <table class="table table-bordered ">
+      <span style="font-weight: bold">注文情報</span>
+      <table class="table table-bordered">
           <tr><th class="table-active">注文日</th><td><%= @order.created_at %></td></tr>
           <tr>
             <th class="table-active">配送先</th>
@@ -24,13 +25,22 @@
 
     <!--請求情報-->
     <div class="col-md-3">
-      <h2>商品合計</h2>
-      <% @order_subtotol = @order.total_payment - @order.shipping_cost %>
-      <p><%= @order_subtotol %></p>
-      <h2>配送料</h2>
-      <p><%= @order.shipping_cost %></p>
-      <h2>ご請求額</h2>
-      <p><%= @order.total_payment %></p>
+      <span style="font-weight: bold">請求内容</span>
+      <table class="table table-bordered">
+        <tr>
+          <th class="table-active">商品合計</th>
+          <% @order_subtotol = @order.total_payment - @order.shipping_cost %>
+          <td><%= @order_subtotol %></td>
+        </tr>
+        <tr>
+          <th class="table-active">配送料</th>
+          <td><%= @order.shipping_cost %></td>
+        </tr>
+        <tr>
+          <th class="table-active">ご請求額</th>
+          <td><%= @order.total_payment %></td>
+        </tr>
+      </table>
     </div>
 
   </div>
@@ -39,13 +49,14 @@
   <div class="row">
     <!--注文内容-->
     <div class="col-md-6">
+      <span style="font-weight: bold">注文内容</span>
       <table class="table table-bordered ">
         <thead>
           <tr>
-            <th>商品</th>
-            <th>単価（税込）</th>
-            <th>個数</th>
-            <th>小計</th>
+            <th class="table-active">商品</th>
+            <th class="table-active">単価（税込）</th>
+            <th class="table-active">個数</th>
+            <th class="table-active">小計</th>
           </tr>
         </thead>
         <% @order.order_details.each do |order_detail| %>
