--- a/app/views/admin/order_details/_show.html.erb
+++ b/app/views/admin/order_details/_show.html.erb
@@ -18,7 +18,7 @@
       <td><%= order_detail.subtotal %>円</td>
       <td>
         <%= form_with model: order_detail, url: admin_order_detail_path(order_detail), method: :patch, local: true do |f|%>
-          <%= f.select :making_status, OrderDetail.making_statuses.keys.to_a %>
+          <%= f.select :making_status, OrderDetail.making_statuses.keys.map{|k| [I18n.t("enums.order_detail.making_status.#{k}"), k]} %>
           <%= f.submit '更新' %>
         <% end %>
       </td>
