--- a/app/views/admin/orders/_index.html.erb
+++ b/app/views/admin/orders/_index.html.erb
@@ -16,7 +16,7 @@
             <tr>
               <td>
                 <%=link_to admin_order_path(order.id) do %>
-                  <%= order.updated_at %>
+                  <%= order.updated_at.to_date %>
                 <% end %>
               </td>
               <td>
@@ -26,7 +26,7 @@
                 <%= order.order_details.sum(:amount) %>
               </td>
               <td>
-                <%= order.status %>
+                <%= order.status_i18n %>
               </td>
             </tr>
             <% end %>
