add gem: bootstrap4-kaminari-views for layout

--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -37,7 +37,7 @@
           </div>
       </table>
 
-      <%= paginate @items %>
+      <%= paginate @items, theme: 'twitter-bootstrap-4' %>
 
     </div>
 
